--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_OSX_DEPLOYMENT_TARGET 13)
 
 link_directories("/Users/nealsid/src/github/libdwarf-code/build/src/lib/libdwarf")
-add_executable(libdwarf-test libdwarf-test.cc)
+add_executable(libdwarf-test libdwarf-test.cc libdwarf-wrapper.cc)
 
 target_include_directories(libdwarf-test PRIVATE "/Users/nealsid/src/github/libdwarf-code/src/lib/libdwarf")
 target_link_libraries(libdwarf-test dwarf z)
